--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <li>
 	<%= gravatar_for user, size: 52 %>
 	<%= link_to user.name, user %>
-	<% if current_user.admin? && !current_user?(user) %> | <%= link_to 'delete', user, method: :delete, data: { confirm: "You sure?" } %>
+	<% if current_user.admin? && !current_user?(user) %> | <%= render '/shared/delete_link', object: user %>
 	<% end %>
 </li>
